# Prac

./: CMakeLists.txt  Prac.pro  Resume.pages  albumdescriber.cpp  albumdescriber.h  albumdescriber.ui  authordescriber.cpp  authordescriber.h  authordescriber.ui  catalog.cpp  catalog.h  events.cpp  events.h  genrediscriber.cpp  genrediscriber.h  genrediscriber.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  radioprogram.cpp  radioprogram.h  requestsgenerator.cpp  requestsgenerator.h  royalmanager.cpp  royalmanager.h  simulationstatisticsform.cpp  simulationstatisticsform.h  simulationstatisticsform.ui  simulator.cpp  simulator.h  songdescriber.cpp  songdescriber.h  songdescriber.ui  statistics.cpp  statistics.h  storageform.cpp  storageform.h  storageform.ui  structures.cpp  (+5 more)
catalog/: albums.txt  authors.txt  genres.txt  songs.txt
doxygen/html/: albumdescriber_8h_source.html  annotated.html  authordescriber_8h_source.html  catalog_8h_source.html  class_album_describer-members.html  class_album_describer.html  class_album_describer__coll__graph.map  class_album_describer__coll__graph.md5  class_author_describer-members.html  class_author_describer.html  class_author_describer__coll__graph.map  class_author_describer__coll__graph.md5  class_catalog__-members.html  class_catalog__.html  class_catalog_loader-members.html  class_catalog_loader.html  class_file_utils-members.html  class_file_utils.html  class_genre_discriber-members.html  class_genre_discriber.html  class_genre_discriber__coll__graph.md5  class_hit_parad_program__.html  (+177 more)
programs/: timetable.txt
(+100 files in other folders)
